<resources>
    <string name="app_name">大管家巡航系统</string>
    <string name="login">登   录</string>
    <string name="register">注册帐号</string>
    <string name="register_now">立即注册</string>
    <string name="title_register">注册</string>
    <string name="firm">重庆公司</string>
    <string name="department">工程</string>
    <string name="project">10年城</string>
    <string name="project_detailed">10年城北区</string>
    <string name="phone">手机号码</string>
    <string name="editPhone">请输入你的手机号码</string>
    <string name="editNum">请输入您的密码</string>
    <string name="pwd">密码</string>
    <string name="confirm">确认密码</string>
    <string name="edit_config_Num">请确认您的密码</string>
    <string name="edit_name">请输入您的姓名</string>
    <string name="name">姓名</string>
    <string name="project_belong">请选择所属类型</string>
    <string name="project_department">所属类型</string>
    <string name="Adminator">请输入用户名</string>
    <string name="search">搜索</string>
    <string name="net_error">网络连接失败，请检查您的网络!</string>
    <string name="errortips">*该手机号已被注册，请重新注册！</string>
    <string name="errorPwd">*密码错误！</string>
    <string name="noRegister">*审核未通过</string>
    <string name="testpwd">请输入登录密码</string>
    <string name="register_successed">注册成功</string>
    <string name="register_successed_tips">注册成功，等待工作人员审核！请审核通过后再登录！</string>
    <string name="I_know">我知道了</string>
    <string name="mainpage">首页</string>
    <string name="libpage">知识库</string>
    <string name="libpage_quality">品质巡检知识库</string>
    <string name="countpage">自查统计</string>
    <string name="personpage">个人中心</string>
    <string name="Department">请选择所属类型</string>
    <string name="keypoints">请选择报事位置</string>
    <string name="Project">请选择所属项目</string>
    <string name="please_select">请选择</string>
    <string name="type_belong">所属类型</string>
    <string name="point_key">关键点位</string>
    <string name="description_problem">请输入问题描述</string>
    <string name="commit">提交</string>
    <string name="self_checking">自检问题</string>
    <string name="camera">拍照</string>
    <string name="cancle">取消</string>
    <string name="album">相册</string>
    <string name="system">大管家巡航系统</string>
    <string name="all">全部</string>
    <string name="versionNow">当前版本：</string>
    <string name="version">2.0</string>
    <string name="manager_phone">联系管理中心：13883554007</string>
    <string name="have_new_version">有新版本，点击更新</string>
    <string name="latest_version">已更新到最新版本</string>
    <string name="version_info">版本信息</string>
    <string name="old_pwd">原密码</string>
    <string name="new_pwd">新密码</string>
    <string name="config_new_pwd">确认新密码</string>
    <string name="config_update">确认修改</string>
    <string name="updatepwd">修改密码</string>
    <string name="noticedetails">通知信息详情</string>
    <string name="notice">通知消息</string>
    <string name="projecttitle">所属项目</string>
    <string name="type">所属类型</string>
    <string name="projectstandard">工程标准</string>
    <string name="area">报事位置</string>
    <string name="time">发现时间</string>
    <string name="descripe">问题描述</string>
    <string name="projectproblems">恰恰为儿童与i东方锆合金法国哈斯大胆前卫发大水大是大非阿斯达芙</string>
    <string name="solve_problem">请输入解决问题</string>
    <string name="daizhenggai">待整改</string>
    <string name="finish">完成整改</string>
    <string name="delay">延迟申请</string>
    <string name="work">派发工单</string>
    <string name="serious">严重问题</string>
    <string name="qingxunze">请选择</string>
    <string name="num">0人</string>
    <string name="pass">审核通过</string>
    <string name="fail">审核未通过</string>
    <string name="memberinfo">人员信息</string>
    <string name="newmenber">新增</string>
    <string name="type_belongs">所属类别</string>
    <string name="tips">提示</string>
    <string name="sure">确定</string>
    <string name="company">Copyright © 2016金科物业服务集团有限公司</string>
    <string name="textsize">100/100</string>
    <string name="history_information">流程历史信息</string>
    <string name="sponsor">发起人</string>
    <string name="processnode">流程节点</string>
    <string name="foundproblem">发现问题</string>
    <string name="dealwithpeople">处理人</string>
    <string name="dealtime">处理时间</string>
    <string name="dealproblem">处理问题</string>
    <string name="result">处理结果</string>
    <string name="btn_selfchecking">自检流程发起</string>
    <string name="btn_selfdealing">自理流程发起</string>
    <string name="press_start">按住说话</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="null_text">内容为空</string>
    <string name="please_select_project">请选择所在项目</string>
    <string name="please_select_department">请选择所在部门</string>
    <string name="please_select_keypoint">请选择关键点位</string>
    <string name="please_select_describe">请输入检查描述或语音描述</string>
    <string name="please_select_pic">请选择图片</string>
    <string name="please_open_record_permision">请打开麦克风权限！</string>
    <string name="please_open_camera_permision">请在应用管理中打开“相机”访问权限！</string>
    <string name="deal">巡检处理</string>
    <string name="no">暂无</string>
    <string name="please_open_cell_permision">请打开电话权限！</string>
    <string name="call">是否拨打</string>
    <string name="peoplephone">的电话？</string>
    <string name="check_deal">巡查处理</string>
    <string name="empty"></string>
    <string name="activity_patrol">智能巡更</string>
    <string name="patrol_began">开始巡更</string>
    <string name="patrol_location">点位管理</string>
    <string name="patrol_remind">巡更提醒</string>
    <string name="activity_patrol_link">智能巡更</string>
    <string name="patrol_link">连接读卡器</string>
    <string name="patrol_link_skip">跳过</string>
    <string name="equipment_hint_1">请打开设备右侧开关</string>
    <string name="equipment_hint_2">红灯闪烁表示设备开启</string>
    <string name="equipment_hint_3">设备连接中...</string>
    <string name="activity_patrol_began">巡更中</string>
    <string name="activity_patrol_sign_in">员工签到</string>
    <string name="activity_patrol_sign_out_success">结束巡更</string>
    <string name="activity_patrol_sign_out">结束巡更</string>
    <string name="point_hint_2">已经完成</string>
    <string name="point_hint_1">个点位</string>
    <string name="point_all_hint_1">个点位</string>
    <string name="point_all_hint_2">总共</string>
    <string name="patrol_began_registration">报事报修</string>
    <string name="patrol_personnel">巡更人员</string>
    <string name="patrol_position">职位</string>
    <string name="patrol_now_time">当前时间</string>
    <string name="patrol_way">巡更任务</string>
    <string name="activity_patrol_sure">退出</string>
    <string name="patrol_sign_in_time">签到时间</string>
    <string name="patrol_sign_out_time">签退时间</string>
    <string name="patrol_time">巡更时间</string>
    <string name="patrol_frequencies">本次完成巡更点位数</string>
    <string name="patrol_leak_detection">本次未检点位数</string>
    <string name="activity_patrol_manage">点位管理</string>
    <string name="patrol_manage_empty_hint">您所在的项目</string>
    <string name="patrol_manage_empty_hint_1">还未添加点位</string>
    <string name="patrol_manage_add">添加</string>
    <string name="patrol_manage_day">今日</string>
    <string name="patrol_manage_times">次</string>
    <string name="patrol_manage_month">本月</string>
    <string name="patrol_manage_location_hint">您所在的项目&#160;|&#160;</string>
    <string name="activity_patrol_remind">巡更提醒</string>
    <string name="patrol_remind_compile">编辑</string>
    <string name="patrol_remind_am">上午</string>
    <string name="patrol_remind_pm">下午</string>
    <string name="patrol_remind_period_everyday">每天</string>
    <string name="patrol_remind_period_monday">周一</string>
    <string name="patrol_remind_period_tuesday">周二</string>
    <string name="patrol_remind_period_wednesday">周三</string>
    <string name="patrol_remind_period_thursday">周四</string>
    <string name="patrol_remind_period_friday">周五</string>
    <string name="patrol_remind_period_saturday">周六</string>
    <string name="patrol_remind_period_sunday">周日</string>
    <string name="patrol_remind_empty_hint">您的项目未设置巡更时间</string>
    <string name="patrol_remind_empty_hint2">请联系项目主管后台添加</string>
    <string name="patrol_remind_add">添加</string>
    <string name="activity_patrol_remind_add">添加提醒</string>
    <string name="patrol_remind_add_cancel">取消</string>
    <string name="patrol_remind_add_save">保存</string>
    <string name="patrol_remind_add_am">上午</string>
    <string name="patrol_remind_add_pm">下午</string>
    <string name="patrol_remind_add_repetition">重复</string>
    <string name="patrol_remind_add_remark">备注</string>
    <string name="patrol_remind_add_remark_hint">输入备注</string>
    <string name="remind_add_repetition_hint">请选择</string>
    <string name="activity_patrol_add">新增点位</string>
    <string name="patrol_add_save">保存</string>
    <string name="equipment_hint_4">操作提示：请把读卡器贴近点位</string>
    <string name="equipment_hint_5">贴近点位</string>
    <string name="equipment_hint_6">点位ID：</string>
    <string name="patrol_point_name">巡更点位</string>
    <string name="patrol_point_time">巡检时间</string>
    <string name="patrol_point_state">巡检状态</string>
    <string name="patrol_point_remark">备注</string>
    <string name="patrol_point_name_hint">请输入当前点位名称</string>
    <string name="patrol_point_remark_hint">请填入备注信息</string>
    <string name="activity_patrol_remind_add_repeti">重复</string>
    <string name="patrol_remind_add_repeti_everyday">每天</string>
    <string name="patrol_remind_add_repeti_sunday">每周日</string>
    <string name="patrol_remind_add_repeti_monday">每周一</string>
    <string name="patrol_remind_add_repeti_tuesday">每周二</string>
    <string name="patrol_remind_add_repeti_wednesday">每周三</string>
    <string name="patrol_remind_add_repeti_thursday">每周四</string>
    <string name="patrol_remind_add_repeti_friday">每周五</string>
    <string name="patrol_remind_add_repeti_saturday">每周六</string>
    <string name="remind_title">关闭巡更提醒</string>
    <string name="remind_cancel">取消</string>
    <string name="remind_repeat_close">关闭这个重复提醒</string>
    <string name="remind_once_close_1">仅在</string>
    <string name="remind_once_close_2">月</string>
    <string name="remind_once_close_3">日（明天）关闭一次</string>
    <string name="activity_main_tab_msg">消息</string>
    <string name="activity_main_knowledge_base">知识库</string>
    <string name="activity_main_workbench">工作台</string>
    <string name="activity_main_self_examination_statistics">自查统计</string>
    <string name="activity_main_personal_center">个人中心</string>
    <string name="activity_news_warming">告警</string>
    <string name="activity_news_pending">超时</string>
    <string name="activity_news_order">工单</string>
    <string name="activity_news_announce">公告</string>
    <string name="activity_news_remind">提醒</string>
    <string name="activity_news_title">消息</string>
    <string name="dialog_exit_title">退出登录操作</string>
    <string name="dialog_exit_context">请确认是否退出当前登录？</string>
    <string name="equipment_popup_title">请选择</string>
    <string name="equipment_popup_bluetooth">蓝牙读卡器</string>
    <string name="equipment_popup_nfc">NFC</string>
    <string name="equipment_popup_set">设置</string>
    <string name="equipment_popup_cancel">取消</string>
    <string name="patrol_point_project_name">您所在的项目</string>
</resources>