<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/base_dimen_580"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_popwindows_exit">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/base_dimen_46"
        android:textColor="@color/black_de"
        android:textSize="@dimen/base_dimen_34"
        tools:text="@string/dialog_exit_title" />


    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:lineSpacingMultiplier="1.3"
        android:paddingTop="@dimen/base_dimen_56"
        android:textColor="@color/black_de"
        android:textSize="@dimen/base_dimen_28"
        tools:text="@string/dialog_exit_context" />

    <View
        android:id="@+id/view_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/base_dimen_2"
        android:layout_below="@+id/message"
        android:layout_marginTop="30dp"
        android:background="@color/fragment_msg_parting_line" />

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_line"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_n"
            android:layout_width="@dimen/base_dimen_0"
            android:layout_height="@dimen/base_dimen_80"
            android:layout_marginLeft="@dimen/base_dimen_30"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="@color/frame_blue"
            android:textSize="@dimen/base_dimen_34"
            tools:text="@string/cancle" />

        <TextView
            android:id="@+id/text_p"
            android:layout_width="@dimen/base_dimen_0"
            android:layout_height="@dimen/base_dimen_80"
            android:layout_marginLeft="@dimen/base_dimen_4"
            android:layout_marginRight="@dimen/base_dimen_30"
            android:layout_weight="1"
            android:background="@drawable/shape_fragment_msg_left_parting_line_1dp"
            android:gravity="center"
            android:textColor="@color/frame_blue"
            android:textSize="@dimen/base_dimen_34"
            tools:text="@string/sure" />
    </LinearLayout>
</RelativeLayout>
